# rikeripsum

./: .gitignore  pyproject.toml
rikeripsum/: rikeripsum.py  script-stripper-all.py  script-stripper.py
